Fixed querying for discounts.